# zeppelin

./: .appveyor.yml  .asf.yaml  .cirrus.yml  .gitattributes  .gitignore  .htaccess  .travis.yaml  .travis.yml  1.sh  AGENTS.md  CNAME  CONTRIBUTING  CONTRIBUTING.md  DEPLOY.md  DISCLAIMER  Dockerfile  Gemfile  LICENSE  NOTICE  NewUser.txt  PULL_REQUEST_TEMPLATE  README.md  Roadmap.md  SECURITY-README.md  SECURITY.md  STYLE.md  Security-README.md  THREAT_MODEL.md  Zeppelin-3016.docx  Zeppelin-User-Impersonation-[3016].docx  Zeppelin-User-Impersonation.md  [READ. ME]  _config.yml  advertise.md  assets.md  community.md  contribute.md  dataswarm.pem  demos.md  distribution.xml  (+32 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE  dependabot.yml
.husky/: pre-commit
.metadata/: version.ini
_layouts/: page.html  sideMenu.html
_plugins/: markdown_tag.rb
_tools/: checkstyle.xml  maven-4.0.0.xsd  scalastyle.xml
alluxio/: pom.xml
angular/: pom.xml
beam/: README.md  pom.xml
bigquery/: README.md  pom.xml  pom.xml~HEAD
build-tools/: pom.xml
cassandra/: .cache-main  .cache-tests  pom.xml
conf/: README.md  clusters.json  configuration.xsl  interpreter-authorization.json  interpreter-list  log4j.properties  log4j.properties2  log4j2.properties  log4j_yarn_cluster.properties  shiro.ini  shiro.ini.template  zeppelin-env.cmd  zeppelin-env.cmd.template  zeppelin-env.sh.template  zeppelin-site.xml  (+1 more)
zeppelin-mcp/: .gitignore  DESIGN.md  GETTING_STARTED.md  README.md  pom.xml  pyproject.toml
zeppelin-mcp/src/zeppelin_mcp/: __init__.py  client.py  context.py  server.py
zeppelin-mcp/tests/: conftest.py  test_client.py  test_context.py  test_server.py
(+6902 files in other folders)
